Ajustes tela de login feita

--- a/frontend/src/app/@core/application/auth/auth.component.html
+++ b/frontend/src/app/@core/application/auth/auth.component.html
@@ -19,10 +19,8 @@
 
         </div>
         <mat-card-header>
-            <img mat-card-image [ngSrc]="'../../assets/logo/logo.png'" [alt]="'Brand Logo'" [width]="100" [height]="100"
-                 priority>
             <mat-card-title>
-                <h1 class="brand">Brand name</h1>
+                <h1 class="brand">The Gallery</h1>
             </mat-card-title>
         </mat-card-header>
         <router-outlet></router-outlet>
