--- a/frontend/src/app/@core/application/auth/sign-up/sign-up.component.html
+++ b/frontend/src/app/@core/application/auth/sign-up/sign-up.component.html
@@ -1,129 +1,126 @@
-Hello World
+<ng-container *ngrxLet="loading$ as loading">
 
-<!--<ng-container *ngrxLet="loading$ as loading">-->
+    <mat-card-content class="sign-up-content">
+        <h4>Preencha o formulário</h4>
+        <mat-vertical-stepper #stepper>
+            <mat-step [stepControl]="authForm">
+                <form [formGroup]="authForm">
+                    <ng-template matStepLabel>Acesso</ng-template>
+                    <mat-form-field>
+                        <mat-label>Email</mat-label>
+                        <mat-icon class="text-primary" matIconPrefix>email</mat-icon>
+                        <input matInput [formControlName]="'email'" type="email">
+                        @if (email?.invalid) {
+                            <mat-error> {{ getFormErrorMessage(email) }}</mat-error>
+                        }
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>Senha</mat-label>
+                        <mat-icon class="text-primary" matIconPrefix>lock</mat-icon>
+                        <input matInput [formControlName]="'password'" [type]="hide ? 'password' : 'text'">
+                        <button mat-icon-button matIconSuffix (click)="hide = !hide">
+                            <mat-icon class="text-primary">visibility{{ hide ? '' : '_off' }}</mat-icon>
+                        </button>
+                        @if (password?.invalid) {
+                            <mat-error> {{ getFormErrorMessage(password) }}</mat-error>
+                        }
+                    </mat-form-field>
+                    <div>
+                        <button mat-button matStepperNext>Próximo</button>
+                    </div>
+                </form>
+            </mat-step>
+            <mat-step [stepControl]="personalDataForm">
+                <form [formGroup]="personalDataForm">
+                    <ng-template matStepLabel>Dados pessoais</ng-template>
+                    <mat-form-field>
+                        <mat-label>Nome</mat-label>
+                        <mat-icon class="text-primary" matIconPrefix>person</mat-icon>
+                        <input matInput [formControlName]="'name'">
+                        @if (name?.invalid) {
+                            <mat-error> {{ getFormErrorMessage(name) }}</mat-error>
+                        }
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>Número do documento</mat-label>
+                        <mat-icon class="text-primary" matIconPrefix>badge</mat-icon>
+                        <input matInput [formControlName]="'documentNumber'" [mask]="CPF_MASK">
+                        @if (documentNumber?.invalid) {
+                            <mat-error> {{ getFormErrorMessage(documentNumber) }}</mat-error>
+                        }
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>Celular</mat-label>
+                        <mat-icon class="text-primary" matIconPrefix>smartphone</mat-icon>
+                        <input matInput [formControlName]="'mobile'" [mask]="MOBILE_MASK">
+                        @if (mobile?.invalid) {
+                            <mat-error> {{ getFormErrorMessage(mobile) }}</mat-error>
+                        }
+                    </mat-form-field>
+                    <div>
+                        <button mat-button class="text-secondary" matStepperPrevious>Anterior</button>
+                        <button mat-button matStepperNext>Próximo</button>
+                    </div>
+                </form>
+            </mat-step>
+            <mat-step [stepControl]="addressForm">
+                <form [formGroup]="addressForm">
+                    <ng-template matStepLabel>Endereço</ng-template>
+                    <mat-form-field>
+                        <mat-label>Cep</mat-label>
+                        <mat-icon class="text-primary" matIconPrefix>location_on</mat-icon>
+                        <input matInput [formControlName]="'zipCode'" [mask]="ZIPCODE_MASK">
+                        @if (zipCode?.invalid) {
+                            <mat-error> {{ getFormErrorMessage(zipCode) }}</mat-error>
+                        }
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>Rua</mat-label>
+                        <mat-icon class="text-primary" matIconPrefix>signpost</mat-icon>
+                        <input matInput [formControlName]="'street'">
+                        @if (street?.invalid) {
+                            <mat-error> {{ getFormErrorMessage(street) }}</mat-error>
+                        }
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>Número</mat-label>
+                        <mat-icon class="text-primary" matIconPrefix>numbers</mat-icon>
+                        <input matInput [formControlName]="'number'">
+                        @if (number?.invalid) {
+                            <mat-error> {{ getFormErrorMessage(number) }}</mat-error>
+                        }
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>Cidade</mat-label>
+                        <mat-icon class="text-primary" matIconPrefix>numbers</mat-icon>
+                        <input matInput [formControlName]="'city'">
+                        @if (city?.invalid) {
+                            <mat-error> {{ getFormErrorMessage(city) }}</mat-error>
+                        }
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>UF</mat-label>
+                        <mat-icon class="text-primary" matIconPrefix>numbers</mat-icon>
+                        <input matInput [formControlName]="'uf'">
+                        @if (uf?.invalid) {
+                            <mat-error> {{ getFormErrorMessage(uf) }}</mat-error>
+                        }
+                    </mat-form-field>
+                    <div>
+                        <button mat-button class="text-secondary" matStepperPrevious>Anterior</button>
+                        <button mat-button class="text-danger" (click)="resetForm()">Limpar</button>
+                    </div>
+                </form>
+            </mat-step>
+        </mat-vertical-stepper>
 
-<!--    <mat-card-content class="sign-up-content">-->
-<!--            <h4>Preencha o formulário</h4>-->
-<!--            <mat-vertical-stepper #stepper>-->
-<!--                <mat-step [stepControl]="authForm">-->
-<!--                    <form #form [formGroup]="authForm">-->
-<!--                        <ng-template matStepLabel>Acesso</ng-template>-->
-<!--                        <mat-form-field>-->
-<!--                            <mat-label>Email</mat-label>-->
-<!--                            <mat-icon class="text-primary" matIconPrefix>email</mat-icon>-->
-<!--                            <input matInput [formControlName]="'email'" type="email">-->
-<!--                            @if (email?.invalid) {-->
-<!--                                <mat-error> {{ getFormErrorMessage(email) }}</mat-error>-->
-<!--                            }-->
-<!--                        </mat-form-field>-->
-<!--                        <mat-form-field>-->
-<!--                            <mat-label>Senha</mat-label>-->
-<!--                            <mat-icon class="text-primary" matIconPrefix>lock</mat-icon>-->
-<!--                            <input matInput [formControlName]="'password'" [type]="hide ? 'password' : 'text'">-->
-<!--                            <button mat-icon-button matIconSuffix (click)="hide = !hide">-->
-<!--                                <mat-icon class="text-primary">visibility{{ hide ? '' : '_off' }}</mat-icon>-->
-<!--                            </button>-->
-<!--                            @if (password?.invalid) {-->
-<!--                                <mat-error> {{ getFormErrorMessage(password) }}</mat-error>-->
-<!--                            }-->
-<!--                        </mat-form-field>-->
-<!--                        <div>-->
-<!--                            <button mat-button matStepperNext>Próximo</button>-->
-<!--                        </div>-->
-<!--                    </form>-->
-<!--                </mat-step>-->
-<!--                <mat-step [stepControl]="personalDataForm">-->
-<!--                    <form [formGroup]="personalDataForm">-->
-<!--                        <ng-template matStepLabel>Dados pessoais</ng-template>-->
-<!--                        <mat-form-field>-->
-<!--                            <mat-label>Nome</mat-label>-->
-<!--                            <mat-icon class="text-primary" matIconPrefix>person</mat-icon>-->
-<!--                            <input matInput [formControlName]="'name'">-->
-<!--                            @if (name?.invalid) {-->
-<!--                                <mat-error> {{ getFormErrorMessage(name) }}</mat-error>-->
-<!--                            }-->
-<!--                        </mat-form-field>-->
-<!--                        <fieldset class="radio-group-fieldset">-->
-<!--                            <mat-radio-group [formControlName]="'legalStatus'">-->
-<!--                                <mat-label>Tipo de pessoa</mat-label>-->
-<!--                                <div class="btn-box">-->
-<!--                                    <mat-radio-button [value]="LegalStatus.NaturalPerson"-->
-<!--                                                      (change)="documentNumber?.reset()">Pessoa Física-->
-<!--                                    </mat-radio-button>-->
-<!--                                    <mat-radio-button [value]="LegalStatus.LegalEntity"-->
-<!--                                                      (change)="documentNumber?.reset()">-->
-<!--                                        Pessoa Jurídica-->
-<!--                                    </mat-radio-button>-->
-<!--                                </div>-->
-<!--                            </mat-radio-group>-->
-<!--                        </fieldset>-->
-<!--                        <mat-form-field>-->
-<!--                            <mat-label>Número do documento</mat-label>-->
-<!--                            <mat-icon class="text-primary" matIconPrefix>badge</mat-icon>-->
-<!--                            <input matInput [formControlName]="'documentNumber'" [mask]="documentNumberMask">-->
-<!--                            @if (documentNumber?.invalid) {-->
-<!--                                <mat-error> {{ getFormErrorMessage(documentNumber) }}</mat-error>-->
-<!--                            }-->
-<!--                        </mat-form-field>-->
-<!--                        <mat-form-field>-->
-<!--                            <mat-label>Celular</mat-label>-->
-<!--                            <mat-icon class="text-primary" matIconPrefix>smartphone</mat-icon>-->
-<!--                            <input matInput [formControlName]="'mobile'" [mask]="MOBILE_MASK">-->
-<!--                            @if (mobile?.invalid) {-->
-<!--                                <mat-error> {{ getFormErrorMessage(mobile) }}</mat-error>-->
-<!--                            }-->
-<!--                        </mat-form-field>-->
-<!--                        <div>-->
-<!--                            <button mat-button class="text-secondary" matStepperPrevious>Anterior</button>-->
-<!--                            <button mat-button matStepperNext>Próximo</button>-->
-<!--                        </div>-->
-<!--                    </form>-->
-<!--                </mat-step>-->
-<!--                <mat-step [stepControl]="addressForm">-->
-<!--                    <form [formGroup]="addressForm">-->
-<!--                        <ng-template matStepLabel>Endereço</ng-template>-->
-<!--                        <mat-form-field>-->
-<!--                            <mat-label>Cep</mat-label>-->
-<!--                            <mat-icon class="text-primary" matIconPrefix>location_on</mat-icon>-->
-<!--                            <input matInput [formControlName]="'zipCode'" [mask]="ZIPCODE_MASK">-->
-<!--                            @if (zipCode?.invalid) {-->
-<!--                                <mat-error> {{ getFormErrorMessage(zipCode) }}</mat-error>-->
-<!--                            }-->
-<!--                        </mat-form-field>-->
-<!--                        <mat-form-field>-->
-<!--                            <mat-label>Rua</mat-label>-->
-<!--                            <mat-icon class="text-primary" matIconPrefix>signpost</mat-icon>-->
-<!--                            <input matInput [formControlName]="'street'">-->
-<!--                            @if (street?.invalid) {-->
-<!--                                <mat-error> {{ getFormErrorMessage(street) }}</mat-error>-->
-<!--                            }-->
-<!--                        </mat-form-field>-->
-<!--                        <mat-form-field>-->
-<!--                            <mat-label>Número</mat-label>-->
-<!--                            <mat-icon class="text-primary" matIconPrefix>numbers</mat-icon>-->
-<!--                            <input matInput [formControlName]="'number'">-->
-<!--                            @if (number?.invalid) {-->
-<!--                                <mat-error> {{ getFormErrorMessage(number) }}</mat-error>-->
-<!--                            }-->
-<!--                        </mat-form-field>-->
-<!--                        <div>-->
-<!--                            <button mat-button class="text-secondary" matStepperPrevious>Anterior</button>-->
-<!--                            <button mat-button class="text-danger" (click)="resetForm()">Limpar</button>-->
-<!--                        </div>-->
-<!--                    </form>-->
-<!--                </mat-step>-->
-<!--            </mat-vertical-stepper>-->
-<!--        } @else if (loading) {-->
-<!--            <mat-spinner></mat-spinner>-->
 
-<!--        }-->
+    </mat-card-content>
 
-<!--    </mat-card-content>-->
+    <mat-card-actions class="sign-up-actions">
+        <button mat-flat-button (click)="signUp()" [disabled]="loading">Criar</button>
+        <a mat-button [routerLink]="['../', RouteList.signIn]"> Voltar</a>
+    </mat-card-actions>
 
-<!--    <mat-card-actions class="sign-up-actions">-->
-<!--        @if (role?.value) {-->
-<!--            <button mat-flat-button (click)="signUp()" [disabled]="loading">Criar</button>-->
-<!--        }-->
-<!--        <a mat-button [routerLink]="['../', RouteList.signIn]"> Voltar</a>-->
-<!--    </mat-card-actions>-->
-<!--</ng-container>-->
+
+</ng-container>
