--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="mat-app-background h-100" [class.dark-theme]="isDarkMode$ | async">
+<div [class.dark-theme]="isDarkMode$ | async">
     <router-outlet></router-outlet>
 </div>
