--- a/frontend/src/theme/dark.scss
+++ b/frontend/src/theme/dark.scss
@@ -1,18 +1,22 @@
 @use 'sass:map';
 @use '../../node_modules/@angular/material/index' as mat;
 
+$typography: (
+    plain-family: 'Varela Round, sans serif',
+    brand-family: 'Varela Round, sans serif',
+    bold-weight: 900,
+    medium-weight: 400,
+    regular-weight: 200,
+);
+$density: (scale: 0);
+
+
 $theme: mat.define-theme((
         color: (
                 theme-type: dark,
                 primary: mat.$cyan-palette,
         ),
-        typography: (
-                plain-family: 'Roboto, sans serif',
-                brand-family: 'Roboto, sans serif',
-                bold-weight: 900,
-                medium-weight: 400,
-                regular-weight: 200,
-        ),
-        density: (scale: -1)
+        typography: $typography,
+        density: $density
 ));
 
