--- a/frontend/src/theme/light.scss
+++ b/frontend/src/theme/light.scss
@@ -1,17 +1,21 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
+$typography: (
+        plain-family: 'Varela Round, sans serif',
+        brand-family: 'Varela Round, sans serif',
+        bold-weight: 900,
+        medium-weight: 400,
+        regular-weight: 200,
+);
+$density: (scale: 0);
+
+
 $theme: mat.define-theme((
         color: (
                 theme-type: light,
                 primary: mat.$azure-palette,
         ),
-        typography: (
-                plain-family: 'Roboto, sans serif',
-                brand-family: 'Roboto, sans serif',
-                bold-weight: 900,
-                medium-weight: 400,
-                regular-weight: 200,
-        ),
-        density: (scale: -1)
+        typography: $typography,
+        density: $density
 ));
