--- a/frontend/src/app/@core/application/home/home.component.scss
+++ b/frontend/src/app/@core/application/home/home.component.scss
@@ -48,6 +48,9 @@
         .mat-icon {
             vertical-align: bottom;
         }
+        .text {
+            margin-left: .5rem;
+        }
     }
 
     .mat-mdc-list-item:first-child {
@@ -55,8 +58,16 @@
     }
 }
 
+main {
+    margin-left: 75px;
+}
+
 .sidenav:hover {
     width: 200px;
+}
+
+.ml-adjusted {
+    margin-left: 125px;
 }
 
 .footer {
