--- a/frontend/src/app/@core/application/home/dashboard/dashboard.component.scss
+++ b/frontend/src/app/@core/application/home/dashboard/dashboard.component.scss
@@ -14,16 +14,17 @@
         justify-content: center;
         align-items: center;
         margin: 2.5rem 0;
-        gap: 15px;
+        gap: 10px;
         .mat-mdc-card {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100px;
-            width: 125px;
-            cursor: pointer;
-            transition: transform 0.2s ease, opacity 1s ease;
+            width: 200px;
+            .mat-mdc-card-title {
+                padding: 1rem 1rem 0 1rem;
+            }
             p {
                 font-family: 'Varela Round', sans-serif;
                 font-size: .8rem;
@@ -31,13 +32,6 @@
             }
         }
 
-        .selected {
-            transform: scale(1.1);
-            z-index: 9999;
-        }
-        .not-selected {
-            opacity: 0.5;
-        }
     }
 
     .box-3 {
@@ -56,19 +50,12 @@
                 margin: 2rem 0;
                 display: flex;
                 flex-direction: column;
+                text-align: center;
                 .mat-divider {
                     margin: 1rem 0;
                 }
-                [mat-raised-button] {
-                    margin-top: 1rem;
-                }
-            }
-            .mat-mdc-card-actions {
-                display: flex;
-                justify-content: center;
             }
         }
     }
-
 
 }
