--- a/frontend/src/app/@core/application/home/reservations/reservations.component.html
+++ b/frontend/src/app/@core/application/home/reservations/reservations.component.html
@@ -1,1 +1,12 @@
-<p>reservations works!</p>
+<mat-card class="container-reception">
+    <mat-card-header class="box">
+        <mat-card-title-group>
+            <mat-card-title>Reservas</mat-card-title>
+        </mat-card-title-group>
+    </mat-card-header>
+    <div class="box">
+        2
+    </div>
+    <div class="box">3</div>
+    <div class="box">4</div>
+</mat-card>
