--- a/frontend/src/app/@core/application/home/home.component.scss
+++ b/frontend/src/app/@core/application/home/home.component.scss
@@ -57,18 +57,14 @@
         margin-top: 1rem;
     }
 }
+//
+//.sidenav:hover {
+//    width: 200px;
+//}
 
-main {
-    margin-left: 75px;
-}
-
-.sidenav:hover {
-    width: 200px;
-}
-
-.ml-adjusted {
-    margin-left: 125px;
-}
+//.ml-adjusted {
+//    margin-left: 125px;
+//}
 
 .footer {
     position: fixed;
