--- a/frontend/src/app/@core/application/home/rooms/rooms.component.scss
+++ b/frontend/src/app/@core/application/home/rooms/rooms.component.scss
@@ -14,7 +14,7 @@
         justify-content: center;
         align-items: center;
         margin: 2.5rem 0;
-        gap: 15px;
+        gap: 2rem;
         .mat-mdc-card {
             display: flex;
             flex-direction: column;
@@ -23,19 +23,19 @@
             height: 100px;
             width: 125px;
             cursor: pointer;
-            transition: transform 0.2s ease, opacity 1s ease;
+            transition: transform .2s ease, opacity .5s ease;
             p {
                 font-family: 'Varela Round', sans-serif;
                 font-size: .8rem;
                 text-align: center;
             }
         }
-
+        .mat-mdc-card:hover,
         .selected {
-            transform: scale(1.1);
+            transform: scale(1.2);
             z-index: 9999;
         }
-        .not-selected {
+        .mat-mdc-card:not(:hover):not(.selected){
             opacity: 0.5;
         }
     }
