--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -24,43 +24,12 @@ html {
         font-family: 'Pacifico', sans-serif;
         @extend .text-success;
     }
-
-    @include mat.card-theme(light.$theme);
-    @include mat.button-theme(light.$theme);
-    @include mat.icon-button-theme(light.$theme);
-    @include mat.form-field-theme(light.$theme);
-    @include mat.divider-theme(light.$theme);
-    @include mat.stepper-theme(light.$theme);
-    @include mat.radio-theme(light.$theme);
-    @include mat.dialog-theme(light.$theme);
-    @include mat.progress-spinner-theme(light.$theme);
-    @include mat.progress-bar-theme(light.$theme);
-    @include mat.snack-bar-theme(light.$theme);
-    @include mat.sidenav-theme(light.$theme);
-    @include mat.toolbar-theme(light.$theme);
-    @include mat.list-theme(light.$theme);
-    @include mat.icon-theme(light.$theme);
-    @include mat.chips-theme(light.$theme);
+    @include mat.all-component-themes(light.$theme);
     @include utils.mixins(light.$theme);
 
 }
 
 .dark-theme {
-    @include mat.card-color(dark.$theme);
-    @include mat.button-color(dark.$theme);
-    @include mat.icon-button-color(dark.$theme);
-    @include mat.form-field-color(dark.$theme);
-    @include mat.divider-color(dark.$theme);
-    @include mat.stepper-color(dark.$theme);
-    @include mat.radio-color(dark.$theme);
-    @include mat.dialog-color(dark.$theme);
-    @include mat.progress-spinner-color(dark.$theme);
-    @include mat.progress-bar-color(dark.$theme);
-    @include mat.snack-bar-color(dark.$theme);
-    @include mat.sidenav-color(dark.$theme);
-    @include mat.list-color(dark.$theme);
-    @include mat.toolbar-color(dark.$theme);
-    @include mat.icon-color(dark.$theme);
-    @include mat.chips-color(dark.$theme);
+    @include mat.all-component-colors(dark.$theme);
     @include utils.mixins(dark.$theme);
 }
