--- a/frontend/src/app/@core/application/home/home.component.scss
+++ b/frontend/src/app/@core/application/home/home.component.scss
@@ -57,14 +57,14 @@
         margin-top: 1rem;
     }
 }
-//
-//.sidenav:hover {
-//    width: 200px;
-//}
 
-//.ml-adjusted {
-//    margin-left: 125px;
-//}
+.sidenav:hover {
+    width: 200px;
+}
+
+.ml-adjusted {
+    margin-left: 125px;
+}
 
 .footer {
     position: fixed;
