--- a/frontend/src/theme/mixins/color-classes.scss
+++ b/frontend/src/theme/mixins/color-classes.scss
@@ -78,6 +78,14 @@
         color: $gray;
     }
 
+    .text-white {
+        color: #ffffff;
+    }
+
+    .text-black {
+        color: #000000;
+    }
+
     .text-light-primary {
         color: $pastel-primary !important;
     }
