--- a/frontend/src/app/@core/application/shared/dialogs/dialog-base/dialog-base.component.html
+++ b/frontend/src/app/@core/application/shared/dialogs/dialog-base/dialog-base.component.html
@@ -7,7 +7,11 @@
 </mat-toolbar>
 
 <mat-divider></mat-divider>
-<mat-dialog-content [innerHTML]="data.content"></mat-dialog-content>
+<mat-dialog-content>
+    <div class="dialog-content">
+        <ng-template [cdkPortalOutlet]="componentPortal"></ng-template>
+    </div>
+</mat-dialog-content>
 <mat-divider></mat-divider>
 <mat-dialog-actions>
     @for(action of data.actions; let last = $last; track action; ) {
